# advent_of_code_2022

./: .gitignore  README.md  pyproject.toml
1/: counting_calories.py
2/: rock_paper_scissors.py  rock_paper_scissors_2.py
3/: rucksacks.py  rucksacks_2.py
4/: section_assignments.py  section_assignments_2.py
5/: crates.py
6/: start_of_packet.py
7/: dir_sizes.py  dir_sizes_try2.py
8/: tree_visibility.py
