[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Molly Jones <molly.jones@spantree.net>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
